[gd_scene load_steps=5 format=3 uid="uid://bn0sqxi41x57p"]

[ext_resource type="Script" path="res://scripts/UI/main_menu.gd" id="1_2n36x"]
[ext_resource type="PackedScene" uid="uid://c274awp5cphdc" path="res://scenes/player.tscn" id="2_5xasc"]

[sub_resource type="FontVariation" id="FontVariation_upiyq"]

[sub_resource type="LabelSettings" id="LabelSettings_5gxbv"]
font = SubResource("FontVariation_upiyq")
font_size = 101

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_2n36x")
player_scene = ExtResource("2_5xasc")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -317.0
offset_top = -271.5
offset_right = 317.0
offset_bottom = 271.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer2"]
texture_filter = 2
layout_mode = 2
text = "Lost Island"
label_settings = SubResource("LabelSettings_5gxbv")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Host" type="Button" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Host"

[node name="IPAddress" type="LineEdit" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "IP address to join"

[node name="Join" type="Button" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 80
text = "Join"

[node name="Quit" type="Button" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 80
text = "Quit"

[connection signal="pressed" from="VBoxContainer2/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
